--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -1,11 +1,6 @@
 title: Default Page
 preset: page
 fields:
-  grid_column:
-    label: Grid Column
-    type: gridfield
-  text:
-    label: Text
-    type: editor
-    size: large
+  aufpluginfield:
+    type: aufpluginfield
 
