--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "peterstollenwerk/auf-kirby-plugin-template",
     "description": "auf kirby plugin template",
     "type": "kirby-plugin",
-    "license": "MIT",
     "authors": [
         {
             "name": "Peter Stollenwerk",
@@ -10,8 +9,7 @@
         }
     ],
     "require": {
-        "getkirby/composer-installer": "^1.1",
-        "getkirby/cms": "^3.3"
+        "getkirby/composer-installer": "^1.1"
     },
     "config": {
         "optimize-autoloader": true
