added license field

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "peterstollenwerk/auf-kirby-plugin-template",
     "description": "auf kirby plugin template",
     "type": "kirby-plugin",
+    "license": "",
     "authors": [
         {
             "name": "Peter Stollenwerk",
