--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,16 @@
             "email": "peter.stollenwerk@aufdesign.de"
         }
     ],
+    "config": {
+        "optimize-autoloader": true
+    },
     "require": {
         "getkirby/composer-installer": "^1.1"
     },
-    "config": {
-        "optimize-autoloader": true
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit  --bootstrap ./tests/bootstrap.php --testdox ./tests/suites"
     }
 }
