--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
         "getkirby/composer-installer": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "spatie/phpunit-watcher": "^1.10"
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit  --bootstrap ./tests/bootstrap.php --testdox ./tests/suites --colors=always"
+        "test": "./vendor/bin/phpunit  --bootstrap ./tests/bootstrap.php --testdox ./tests/suites --colors=always",
+        "watch": "./vendor/bin/phpunit-watcher watch  --bootstrap ./tests/bootstrap.php --testdox ./tests/suites --colors=always"
     }
 }
