--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "getkirby/composer-installer": "^1.1"
     },
     "require-dev": {
+        "getkirby/cms": "^3.3",
         "phpunit/phpunit": "^7.5",
         "spatie/phpunit-watcher": "^1.10"
     },
