updated kirby version and composer-installer version

--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,15 @@
         "optimize-autoloader": true
     },
     "require": {
-        "getkirby/composer-installer": "^1.1"
+        "getkirby/composer-installer": "^1.4"
     },
     "require-dev": {
-        "getkirby/cms": "^3.3",
-        "phpunit/phpunit": "^7.5",
+        "getkirby/cms": "^3.4.2",
+        "phpunit/phpunit": "^9.3.8",
         "spatie/phpunit-watcher": "^1.10"
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit  --bootstrap ./tests/bootstrap.php --testdox ./tests/suites --colors=always",
+        "test": "/Applications/MAMP/bin/php/php7.4.2/bin/php ./vendor/bin/phpunit  --bootstrap ./tests/bootstrap.php --testdox ./tests/suites --colors=always",
         "watch": "./vendor/bin/phpunit-watcher watch  --bootstrap ./tests/bootstrap.php --testdox ./tests/suites --colors=always"
     }
 }
